--- a/index.html
+++ b/index.html
@@ -3,22 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eliminación de Datos</title>
+    <title>Eliminación de Datos - Gestiones BV</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+        }
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2rem;
+        }
+        header p {
+            margin: 5px 0 0;
+            font-size: 1rem;
+        }
+        main {
             margin: 20px;
+            padding: 20px;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            max-width: 600px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        h2 {
+            color: #4CAF50;
+            text-align: center;
+        }
+        p {
             line-height: 1.6;
         }
-        h1 {
-            color: #4CAF50;
-        }
         form {
-            background: #f9f9f9;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            max-width: 500px;
+            margin-top: 20px;
+        }
+        label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
         }
         input, button {
             width: 100%;
@@ -26,41 +57,59 @@
             margin: 10px 0;
             border: 1px solid #ccc;
             border-radius: 5px;
+            font-size: 1rem;
         }
         button {
             background-color: #4CAF50;
             color: white;
             font-weight: bold;
             cursor: pointer;
+            transition: background-color 0.3s ease;
         }
         button:hover {
             background-color: #45a049;
         }
+        footer {
+            text-align: center;
+            margin-top: 20px;
+            color: #666;
+            font-size: 0.9rem;
+        }
+        footer a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
-    <h1>Eliminación de Datos</h1>
-    <p>Nos tomamos muy en serio la privacidad de tus datos. Si deseas eliminar los datos asociados a tu cuenta, sigue estos pasos:</p>
-    <ol>
-        <li>Rellena el formulario a continuación con la información requerida.</li>
-        <li>Haz clic en "Enviar Solicitud".</li>
-        <li>Procesaremos tu solicitud dentro de un plazo de 30 días hábiles.</li>
-    </ol>
+    <header>
+        <h1>Gestiones BV</h1>
+        <p>Eliminación de Datos de Usuario</p>
+    </header>
+    <main>
+        <h2>Solicita la Eliminación de tus Datos</h2>
+        <p>En <strong>Gestiones BV</strong>, nos tomamos muy en serio tu privacidad. Si deseas eliminar los datos asociados a tu cuenta, por favor completa el siguiente formulario. Procesaremos tu solicitud dentro de un plazo de 30 días hábiles.</p>
+        <form action="https://formsubmit.co/equipo@gestionesbv.com" method="POST">
+            <label for="userID">ID de Usuario:</label>
+            <input type="text" id="userID" name="userID" placeholder="Escribe tu ID de usuario" required>
 
-    <form action="https://formsubmit.co/tu-correo@dominio.com" method="POST">
-        <label for="userID">ID de Usuario:</label>
-        <input type="text" id="userID" name="userID" placeholder="Escribe tu ID de usuario" required>
+            <label for="email">Correo Electrónico:</label>
+            <input type="email" id="email" name="email" placeholder="Escribe tu correo electrónico" required>
 
-        <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" placeholder="Escribe tu correo electrónico" required>
+            <!-- Configuración opcional de reCAPTCHA -->
+            <input type="hidden" name="_captcha" value="false">
 
-        <!-- Configuración opcional de reCAPTCHA -->
-        <input type="hidden" name="_captcha" value="false">
+            <!-- Redirección después de enviar -->
+            <input type="hidden" name="_next" value="https://gestionesbv.github.io/gracias">
 
-        <!-- Redirección después de enviar -->
-        <input type="hidden" name="_next" value="https://tusitio.com/gracias">
-
-        <button type="submit">Enviar Solicitud</button>
-    </form>
+            <button type="submit">Enviar Solicitud</button>
+        </form>
+    </main>
+    <footer>
+        <p>&copy; 2024 Gestiones BV. Todos los derechos reservados. | <a href="mailto:equipo@gestionesbv.com">Contáctanos</a></p>
+    </footer>
 </body>
 </html>
