--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
 <body>
     <header>
         <h1>Gestiones BV</h1>
-        <p>Eliminación de Datos de Usuario</p>
+        <p>No te preocupes, tus datos están seguros</p>
     </header>
     <main>
-        <h2>Solicita la Eliminación de tus Datos</h2>
-        <p>En <strong>Gestiones BV</strong>, nos tomamos muy en serio tu privacidad. Si deseas eliminar los datos asociados a tu cuenta, por favor completa el siguiente formulario. Procesaremos tu solicitud dentro de un plazo de 30 días hábiles.</p>
+        <h2>Solicita la Eliminación de tus Datos de nuestro ecosistema</h2>
+        <p>En <strong>Gestiones BV</strong>, nos tomamos muy en serio tu privacidad. Si deseas eliminar los datos asociados a tu cuenta, por favor completa el siguiente formulario. Procesaremos tu solicitud dentro de un plazo de 20 días hábiles.</p>
         <form action="https://formsubmit.co/equipo@gestionesbv.com" method="POST">
-            <label for="userID">ID de Usuario:</label>
-            <input type="text" id="userID" name="userID" placeholder="Escribe tu ID de usuario" required>
+            <label for="userID">ID de Usuario o nmbre de usuario:</label>
+            <input type="text" id="userID" name="userID" placeholder="Escribe tu ID o Nombre de Usuario" required>
 
             <label for="email">Correo Electrónico:</label>
             <input type="email" id="email" name="email" placeholder="Escribe tu correo electrónico" required>
