--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¡Gracias por tu Solicitud! - Gestiones BV</title>
+    <title>Eliminación de Datos - Gestiones BV</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -11,51 +11,105 @@
             padding: 0;
             background-color: #f4f4f9;
             color: #333;
-            text-align: center;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
         }
-        div {
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2rem;
+        }
+        header p {
+            margin: 5px 0 0;
+            font-size: 1rem;
+        }
+        main {
+            margin: 20px;
+            padding: 20px;
             background: white;
-            padding: 30px;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
-            width: 90%;
+            max-width: 600px;
+            margin-left: auto;
+            margin-right: auto;
         }
-        h1 {
+        h2 {
             color: #4CAF50;
-            margin-bottom: 10px;
+            text-align: center;
         }
         p {
-            font-size: 1rem;
             line-height: 1.6;
-            margin-bottom: 20px;
         }
-        a {
-            color: #4CAF50;
-            text-decoration: none;
+        form {
+            margin-top: 20px;
+        }
+        label {
+            display: block;
+            margin-bottom: 5px;
             font-weight: bold;
         }
-        a:hover {
-            text-decoration: underline;
+        input, button {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 1rem;
+        }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            font-weight: bold;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        button:hover {
+            background-color: #45a049;
         }
         footer {
+            text-align: center;
             margin-top: 20px;
-            font-size: 0.9rem;
             color: #666;
+            font-size: 0.9rem;
+        }
+        footer a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
+        footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <div>
-        <h1>¡Gracias por tu solicitud!</h1>
-        <p>Hemos recibido tu solicitud para eliminar tus datos. Nuestro equipo procesará tu petición en un plazo máximo de <strong>20 días hábiles</strong>.</p>
-        <p>Si necesitas más información, no dudes en <a href="mailto:equipo@gestionesbv.com">contactarnos</a>. Estamos aquí para ayudarte.</p>
-        <footer>&copy; 2024 Gestiones BV. Todos los derechos reservados.</footer>
-    </div>
+    <header>
+        <h1>Gestiones BV</h1>
+        <p>No te preocupes, tus datos están seguros</p>
+    </header>
+    <main>
+        <h2>Solicita la Eliminación de tus Datos de nuestro ecosistema</h2>
+        <p>En <strong>Gestiones BV</strong>, nos tomamos muy en serio tu privacidad. Si deseas eliminar los datos asociados a tu cuenta, por favor completa el siguiente formulario. Procesaremos tu solicitud dentro de un plazo de 20 días hábiles.</p>
+        <form action="https://formsubmit.co/equipo@gestionesbv.com" method="POST">
+            <label for="userID">ID de Usuario o Nombre de Usuario:</label>
+            <input type="text" id="userID" name="userID" placeholder="Escribe tu ID o Nombre de Usuario" required>
+
+            <label for="email">Correo Electrónico:</label>
+            <input type="email" id="email" name="email" placeholder="Escribe tu correo electrónico" required>
+
+            <!-- Configuración opcional de reCAPTCHA -->
+            <input type="hidden" name="_captcha" value="false">
+
+            <!-- Redirección después de enviar -->
+            <input type="hidden" name="_next" value="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/gracias.html">
+
+            <button type="submit">Enviar Solicitud</button>
+        </form>
+    </main>
+    <footer>
+        <p>&copy; 2024 Gestiones BV. Todos los derechos reservados. | <a href="mailto:equipo@gestionesbv.com">Contáctanos</a></p>
+    </footer>
 </body>
 </html>
-
