--- a/index.html
+++ b/index.html
@@ -1,115 +1,170 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eliminación de Datos - Gestiones BV</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2rem;
-        }
-        header p {
-            margin: 5px 0 0;
-            font-size: 1rem;
-        }
-        main {
-            margin: 20px;
-            padding: 20px;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        h2 {
-            color: #4CAF50;
-            text-align: center;
-        }
-        p {
-            line-height: 1.6;
-        }
-        form {
-            margin-top: 20px;
-        }
-        label {
-            display: block;
-            margin-bottom: 5px;
-            font-weight: bold;
-        }
-        input, button {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 1rem;
-        }
-        button {
-            background-color: #4CAF50;
-            color: white;
-            font-weight: bold;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        footer {
-            text-align: center;
-            margin-top: 20px;
-            color: #666;
-            font-size: 0.9rem;
-        }
-        footer a {
-            color: #4CAF50;
-            text-decoration: none;
-        }
-        footer a:hover {
-            text-decoration: underline;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gestiones BV</title>
+  <style>
+    /* Estilos globales */
+    body {
+      margin: 0;
+      font-family: 'Helvetica', sans-serif;
+      color: #333;
+    }
+
+    /* Fondo de página */
+    .background-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('https://gestionesbv.github.io/gestiones_bv/Como-crear-una-estrategia-de-marketing-en-redes-sociales-01.png') no-repeat center center fixed;
+      background-size: cover;
+      opacity: 0.3;
+      z-index: -1;
+    }
+
+    /* Encabezado */
+    header {
+      background-color: rgba(248, 249, 250, 0.85);
+      text-align: center;
+      padding: 20px 0;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    header h1 {
+      font-size: 2.5em;
+      color: #6a7a96;
+    }
+
+    /* Barra de navegación */
+    nav {
+      background-color: rgba(248, 249, 250, 0.85);
+      padding: 10px 0;
+      text-align: center;
+    }
+
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      color: #555;
+      font-weight: bold;
+      font-size: 1.1em;
+    }
+
+    nav a:hover {
+      color: #333;
+    }
+
+    /* Contenido principal */
+    .content {
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+    }
+
+    .services {
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
+      gap: 20px;
+      max-width: 1200px;
+      margin: 20px auto;
+    }
+
+    .service-item {
+      background: #ffffff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      text-align: center;
+      width: 30%;
+      min-width: 250px;
+    }
+
+    .service-item img {
+      max-width: 100%;
+      border-radius: 10px;
+      margin-bottom: 15px;
+    }
+
+    .service-item h3 {
+      color: #6a7a96;
+      font-size: 1.5em;
+      margin-bottom: 10px;
+    }
+
+    .service-item p {
+      color: #666;
+      font-size: 1em;
+      line-height: 1.6;
+    }
+
+    /* Footer */
+    footer {
+      background-color: rgba(248, 249, 250, 0.85);
+      color: #555;
+      text-align: center;
+      padding: 10px 0;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>Gestiones BV</h1>
-        <p>No te preocupes, tus datos están seguros</p>
-    </header>
-    <main>
-        <h2>Solicita la Eliminación de tus Datos de nuestro ecosistema</h2>
-        <p>En <strong>Gestiones BV</strong>, nos tomamos muy en serio tu privacidad. Si deseas eliminar los datos asociados a tu cuenta, por favor completa el siguiente formulario. Procesaremos tu solicitud dentro de un plazo de 20 días hábiles.</p>
-        <form action="https://formsubmit.co/equipo@gestionesbv.com" method="POST">
-            <label for="userID">ID de Usuario o Nombre de Usuario:</label>
-            <input type="text" id="userID" name="userID" placeholder="Escribe tu ID o Nombre de Usuario" required>
+  <!-- Fondo de página -->
+  <div class="background-overlay"></div>
 
-            <label for="email">Correo Electrónico:</label>
-            <input type="email" id="email" name="email" placeholder="Escribe tu correo electrónico" required>
+  <!-- Encabezado -->
+  <header>
+    <h1>Gestiones BV</h1>
+  </header>
 
-            <!-- Configuración opcional de reCAPTCHA -->
-            <input type="hidden" name="_captcha" value="false">
+  <!-- Barra de navegación -->
+  <nav>
+    <a href="index.html">Inicio</a>
+    <a href="politica_privacidad.html">Política de Privacidad</a>
+    <a href="eliminacion_datos.html">Eliminación de Datos</a>
+    <a href="terminos_condiciones.html">Términos y Condiciones</a>
+    <a href="cultura.html">Cultura</a>
+    <a href="contacto.html">Contáctanos</a>
+  </nav>
 
-            <!-- Redirección después de enviar -->
-            <input type="hidden" name="_next" value="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/gracias.html">
+  <!-- Contenido principal -->
+  <div class="content">
+    <section class="services">
+      <div class="service-item">
+        <img src="https://gestionesbv.github.io/gestiones_bv/kpi_looker.png" alt="KPI y Dashboard">
+        <h3>KPI y Dashboards</h3>
+        <p>
+          Creación de indicadores clave de rendimiento personalizados y dashboards interactivos para facilitar la toma de decisiones basadas en datos.
+        </p>
+      </div>
+      <div class="service-item">
+        <img src="https://gestionesbv.github.io/gestiones_bv/bigquery.png" alt="Servicios SQL">
+        <h3>Servicios SQL</h3>
+        <p>
+          Generación y análisis de datos en plataformas como BigQuery, integradas con sistemas como Google y Facebook.
+        </p>
+      </div>
+      <div class="service-item">
+        <img src="https://gestionesbv.github.io/gestiones_bv/automatizacion.jpeg" alt="Automatización">
+        <h3>Automatización</h3>
+        <p>
+          Automatización de reportes para optimizar procesos analíticos, reduciendo tiempo y esfuerzo operativo.
+        </p>
+      </div>
+    </section>
+  </div>
 
-            <button type="submit">Enviar Solicitud</button>
-        </form>
-    </main>
-    <footer>
-        <p>&copy; 2024 Gestiones BV. Todos los derechos reservados. | <a href="mailto:equipo@gestionesbv.com">Contáctanos</a></p>
-    </footer>
+  <!-- Footer -->
+  <footer>
+    © 2024 Gestiones BV | Transformación Digital y Marketing de Datos
+  </footer>
 </body>
 </html>
