--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gestiones BV</title>
   <style>
-    /* Estilos globales */
+    /* CSS general */
     body {
       margin: 0;
       font-family: 'Helvetica', sans-serif;
       color: #333;
     }
 
-    /* Fondo de página */
+    /* Superposición de fondo con transparencia */
     .background-overlay {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background: url('https://gestionesbv.github.io/gestiones_bv/Como-crear-una-estrategia-de-marketing-en-redes-sociales-01.png') no-repeat center center fixed;
+      background: url('https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/Como-crear-una-estrategia-de-marketing-en-redes-sociales-01.png') no-repeat center center fixed;
       background-size: cover;
       opacity: 0.3;
       z-index: -1;
@@ -117,7 +117,7 @@
   </style>
 </head>
 <body>
-  <!-- Fondo de página -->
+  <!-- Superposición de fondo -->
   <div class="background-overlay"></div>
 
   <!-- Encabezado -->
@@ -139,21 +139,21 @@
   <div class="content">
     <section class="services">
       <div class="service-item">
-        <img src="https://gestionesbv.github.io/gestiones_bv/kpi_looker.png" alt="KPI y Dashboard">
+        <img src="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/kpi_looker.png" alt="KPI y Dashboard">
         <h3>KPI y Dashboards</h3>
         <p>
           Creación de indicadores clave de rendimiento personalizados y dashboards interactivos para facilitar la toma de decisiones basadas en datos.
         </p>
       </div>
       <div class="service-item">
-        <img src="https://gestionesbv.github.io/gestiones_bv/bigquery.png" alt="Servicios SQL">
+        <img src="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/bigquery.png" alt="Servicios SQL">
         <h3>Servicios SQL</h3>
         <p>
           Generación y análisis de datos en plataformas como BigQuery, integradas con sistemas como Google y Facebook.
         </p>
       </div>
       <div class="service-item">
-        <img src="https://gestionesbv.github.io/gestiones_bv/automatizacion.jpeg" alt="Automatización">
+        <img src="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/automatizacion.jpeg" alt="Automatización">
         <h3>Automatización</h3>
         <p>
           Automatización de reportes para optimizar procesos analíticos, reduciendo tiempo y esfuerzo operativo.
