--- a/index.html
+++ b/index.html
@@ -32,24 +32,25 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 10px 20px;
+      padding: 20px 40px;
+      font-size: 1.5em; /* Agranda el encabezado */
     }
 
     header h1 {
-      font-size: 1.5em;
+      font-size: 2em;
       margin: 0;
     }
 
     nav {
       display: flex;
-      gap: 15px;
+      gap: 20px;
     }
 
     nav a {
       text-decoration: none;
       color: #fff;
       font-weight: bold;
-      font-size: 1em;
+      font-size: 1.2em; /* Agranda las letras de los botones */
     }
 
     nav a:hover {
@@ -58,52 +59,53 @@
 
     /* Contenido principal */
     .content {
-      padding: 20px;
+      padding: 40px;
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 20px;
+      gap: 40px;
     }
 
     .services {
       display: flex;
       justify-content: space-around;
       flex-wrap: wrap;
-      gap: 20px;
+      gap: 40px;
       max-width: 1200px;
-      margin: 20px auto;
+      margin: 40px auto;
     }
 
     .service-item {
       background: #ffffff;
-      padding: 20px;
-      border-radius: 10px;
+      padding: 30px;
+      border-radius: 15px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       text-align: center;
       width: 30%;
-      min-width: 250px;
-      aspect-ratio: 1 / 1; /* Cuadrado */
+      min-width: 300px;
+      aspect-ratio: 1 / 1; /* Cuadrado perfecto */
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      font-size: 1.2em; /* Agranda todo el texto dentro */
     }
 
     .service-item img {
       max-width: 100%;
       border-radius: 10px;
-      margin-bottom: 15px;
+      margin-bottom: 20px;
     }
 
     .service-item h3 {
       color: #6a7a96;
-      font-size: 1.5em;
-      margin-bottom: 10px;
+      font-size: 1.8em; /* Título más grande */
+      margin-bottom: 15px;
     }
 
     .service-item p {
       color: #666;
-      font-size: 1em;
-      line-height: 1.6;
+      font-size: 1.2em; /* Texto de descripción más grande */
+      line-height: 1.8;
     }
 
     /* Footer */
@@ -111,7 +113,8 @@
       background-color: rgba(248, 249, 250, 0.85);
       color: #555;
       text-align: center;
-      padding: 10px 0;
+      padding: 20px 0;
+      font-size: 1.2em; /* Agranda el texto del footer */
       position: fixed;
       bottom: 0;
       width: 100%;
@@ -138,7 +141,7 @@
 
       .service-item {
         width: 80%;
-        max-width: 300px;
+        max-width: 400px;
       }
     }
   </style>
@@ -169,6 +172,9 @@
         <p>
           Creación de indicadores clave de rendimiento personalizados y dashboards interactivos para facilitar la toma de decisiones basadas en datos.
         </p>
+        <p>
+          Incluye integración con herramientas como Power BI, Looker, y Tableau, adaptadas a tus necesidades empresariales.
+        </p>
       </div>
       <div class="service-item">
         <img src="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/bigquery.png" alt="Servicios SQL">
@@ -176,12 +182,18 @@
         <p>
           Generación y análisis de datos en plataformas como BigQuery, integradas con sistemas como Google y Facebook.
         </p>
+        <p>
+          Implementación de modelos de datos optimizados para análisis avanzado y reportes automatizados.
+        </p>
       </div>
       <div class="service-item">
         <img src="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/automatizacion.jpeg" alt="Automatización">
         <h3>Automatización</h3>
         <p>
           Automatización de reportes para optimizar procesos analíticos, reduciendo tiempo y esfuerzo operativo.
+        </p>
+        <p>
+          Incluye alertas personalizadas y flujos de trabajo automáticos para agilizar la toma de decisiones.
         </p>
       </div>
     </section>
