--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       justify-content: space-between;
       align-items: center;
       padding: 20px 40px;
-      font-size: 1.5em; /* Agranda el encabezado */
+      font-size: 1.5em;
     }
 
     header h1 {
@@ -50,7 +50,7 @@
       text-decoration: none;
       color: #fff;
       font-weight: bold;
-      font-size: 1.2em; /* Agranda las letras de los botones */
+      font-size: 1.2em;
     }
 
     nav a:hover {
@@ -77,34 +77,34 @@
 
     .service-item {
       background: #ffffff;
-      padding: 30px;
+      padding: 20px;
       border-radius: 15px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       text-align: center;
       width: 30%;
       min-width: 300px;
-      aspect-ratio: 1 / 1; /* Cuadrado perfecto */
+      aspect-ratio: 5 / 4; /* Proporción más cuadrada */
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      font-size: 1.2em; /* Agranda todo el texto dentro */
+      font-size: 1.2em;
     }
 
     .service-item img {
       max-width: 100%;
       border-radius: 10px;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
     }
 
     .service-item h3 {
       color: #6a7a96;
-      font-size: 1.8em; /* Título más grande */
-      margin-bottom: 15px;
+      font-size: 1.8em;
+      margin-bottom: 10px;
     }
 
     .service-item p {
       color: #666;
-      font-size: 1.2em; /* Texto de descripción más grande */
+      font-size: 1.2em;
       line-height: 1.8;
     }
 
@@ -114,7 +114,7 @@
       color: #555;
       text-align: center;
       padding: 20px 0;
-      font-size: 1.2em; /* Agranda el texto del footer */
+      font-size: 1.2em;
       position: fixed;
       bottom: 0;
       width: 100%;
