--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       text-align: center;
       width: 30%;
       min-width: 300px;
-      aspect-ratio: 5 / 4; /* Proporción más cuadrada */
+      aspect-ratio: 16 / 9; /* Imagen panorámica */
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -106,6 +106,7 @@
       color: #666;
       font-size: 1.2em;
       line-height: 1.8;
+      text-align: justify; /* Texto justificado */
     }
 
     /* Footer */
