--- a/index.html
+++ b/index.html
@@ -71,9 +71,18 @@
 
         .services {
             display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
+            flex-direction: column;
+            align-items: center;
             gap: 40px;
+            width: 100%; /* Asegura que .services ocupe todo el ancho disponible */
+        }
+
+        .services-top {
+            display: flex;
+            justify-content: center;
+            gap: 40px;
+            width: 100%;
+            max-width: 1200px;
         }
 
         .service-item {
@@ -87,6 +96,7 @@
             flex-direction: column;
             aspect-ratio: 1 / 1;
             overflow: hidden;
+            width: calc(50% - 20px); /* Ancho para dos columnas */
         }
 
         .service-item img {
@@ -105,38 +115,25 @@
 
         .service-item p {
             color: #666;
-            font-size: 0.9em;
-            line-height: 1.5;
+            font-size: 0.8em;
+            line-height: 1.3;
             text-align: justify;
             flex-grow: 1;
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
+            padding: 0 10px;
             overflow: hidden;
         }
 
-        .services .service-item:nth-child(2) {
-            margin-top: 20px;
-        }
-
-        @media (min-width: 901px) {
-            .service-item {
-              width: calc(33.33% - 27px + 20%);
-            }
-        }
-
         @media (max-width: 900px) {
-            .service-item {
-                width: calc(50% - 30px + 10%);
+            .services-top {
+                flex-direction: column;
+                align-items: center;
             }
-        }
-
-        @media (max-width: 600px) {
             .service-item {
-                width: 100%;
-            }
-            .content {
-                padding: 20px;
+                width: 90%;
+                margin-bottom: 20px; /* Espacio entre los elementos en vertical */
             }
         }
     </style>
@@ -156,15 +153,17 @@
     </header>
     <div class="content">
         <section class="services">
-            <div class="service-item">
-                <img src="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/kpi_looker.png" alt="KPI y Dashboard">
-                <h3>KPI y Dashboards</h3>
-                <p>Creación de indicadores clave de rendimiento personalizados y dashboards interactivos para facilitar la toma de decisiones basadas en datos. Incluye integración con herramientas como Power BI, Looker, y Tableau, adaptadas a tus necesidades empresariales.</p>
-            </div>
-            <div class="service-item">
-                <img src="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/bigquery.png" alt="Servicios SQL">
-                <h3>Servicios SQL</h3>
-                <p>Generación y análisis de datos en plataformas como BigQuery, integradas con sistemas como Google y Facebook. Implementación de modelos de datos optimizados para análisis avanzado y reportes automatizados.</p>
+            <div class="services-top">
+                <div class="service-item">
+                    <img src="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/kpi_looker.png" alt="KPI y Dashboard">
+                    <h3>KPI y Dashboards</h3>
+                    <p>Creación de indicadores clave de rendimiento personalizados y dashboards interactivos para facilitar la toma de decisiones basadas en datos. Incluye integración con herramientas como Power BI, Looker, y Tableau, adaptadas a tus necesidades empresariales.</p>
+                </div>
+                <div class="service-item">
+                    <img src="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/bigquery.png" alt="Servicios SQL">
+                    <h3>Servicios SQL</h3>
+                    <p>Generación y análisis de datos en plataformas como BigQuery, integradas con sistemas como Google y Facebook. Implementación de modelos de datos optimizados para análisis avanzado y reportes automatizados.</p>
+                </div>
             </div>
             <div class="service-item">
                 <img src="https://gestionesbv.github.io/eliminacion_usuario_gestionesbv/automatizacion.jpeg" alt="Automatización">
