--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             text-decoration: none;
             color: #fff;
             font-weight: bold;
-            font-size: 1.2em;
+            font-size: 1em; /* Fuente disminuida en 2 (era 1.2em) */
         }
 
         nav a:hover {
@@ -74,7 +74,7 @@
             flex-direction: column;
             align-items: center;
             gap: 40px;
-            width: 100%; /* Asegura que .services ocupe todo el ancho disponible */
+            width: 100%;
         }
 
         .services-top {
@@ -96,7 +96,7 @@
             flex-direction: column;
             aspect-ratio: 1 / 1;
             overflow: hidden;
-            width: calc(50% - 20px); /* Ancho para dos columnas */
+            width: calc(50% - 20px);
         }
 
         .service-item img {
@@ -115,7 +115,7 @@
 
         .service-item p {
             color: #666;
-            font-size: 0.8em;
+            font-size: 0.9em; /* Fuente aumentada en 1 (era 0.8em) */
             line-height: 1.3;
             text-align: justify;
             flex-grow: 1;
@@ -133,7 +133,7 @@
             }
             .service-item {
                 width: 90%;
-                margin-bottom: 20px; /* Espacio entre los elementos en vertical */
+                margin-bottom: 20px;
             }
         }
     </style>
