--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
         .service-item p {
             color: #666;
-            font-size: 0.9em; /* Fuente aumentada en 1 (era 0.8em) */
+            font-size: 1em; /* Fuente */
             line-height: 1.3;
             text-align: justify;
             flex-grow: 1;
