--- a/index.html
+++ b/index.html
@@ -34,23 +34,29 @@
             align-items: center;
             padding: 20px 40px;
             font-size: 1.5em;
+            flex-wrap: wrap; /* Permite el ajuste en pantallas pequeñas */
         }
 
         header h1 {
             font-size: 2em;
             margin: 0;
+            width: auto; /* Evita que el título ocupe todo el ancho */
         }
 
         nav {
             display: flex;
             gap: 20px;
+            flex-wrap: wrap; /* Permite que los links se envuelvan */
+            justify-content: center; /* Centra los links en pantallas pequeñas */
         }
 
         nav a {
             text-decoration: none;
             color: #fff;
             font-weight: bold;
-            font-size: 0.9em; /* Fuente disminuida en 3 (era 1.2em) */
+            font-size: 0.9em;
+            padding: 5px 10px; /* Espacio alrededor de los links */
+            white-space: nowrap; /* Evita que los links se corten */
         }
 
         nav a:hover {
@@ -115,7 +121,7 @@
 
         .service-item p {
             color: #666;
-            font-size: 1.2em; /* Fuente */
+            font-size: 1.2em;
             line-height: 1.3;
             text-align: justify;
             flex-grow: 1;
@@ -126,14 +132,14 @@
             overflow: hidden;
         }
 
-        @media (max-width: 900px) {
-            .services-top {
+        @media (max-width: 768px) {
+            header {
                 flex-direction: column;
-                align-items: center;
+                text-align: center;
+                padding: 20px;
             }
-            .service-item {
-                width: 90%;
-                margin-bottom: 20px;
+            nav {
+                flex-direction: column;
             }
         }
     </style>
