--- a/index.html
+++ b/index.html
@@ -34,23 +34,30 @@
             align-items: center;
             padding: 20px 40px;
             font-size: 1.5em;
+            flex-wrap: wrap;
         }
 
         header h1 {
             font-size: 2em;
             margin: 0;
+            white-space: nowrap;
         }
 
         nav {
             display: flex;
-            gap: 20px;
+            gap: 10px;
+            flex-wrap: wrap;
+            justify-content: center;
         }
 
         nav a {
             text-decoration: none;
             color: #fff;
             font-weight: bold;
-            font-size: 0.9em; /* Fuente disminuida en 3 (era 1.2em) */
+            font-size: 0.9em;
+            padding: 8px 12px;
+            border-radius: 5px;
+            white-space: nowrap;
         }
 
         nav a:hover {
@@ -80,7 +87,7 @@
         .services-top {
             display: flex;
             justify-content: center;
-            gap: 40px;
+            gap: 20px;
             width: 100%;
             max-width: 1200px;
         }
@@ -90,18 +97,17 @@
             padding: 20px;
             border-radius: 15px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            text-align: center;
+            text-align: left;
             box-sizing: border-box;
             display: flex;
             flex-direction: column;
-            aspect-ratio: 1 / 1;
-            overflow: hidden;
-            width: calc(50% - 20px);
+            width: calc(50% - 10px);
+            min-height: 300px;
         }
 
         .service-item img {
             width: 100%;
-            height: 50%;
+            max-height: 150px;
             border-radius: 10px;
             margin-bottom: 15px;
             object-fit: cover;
@@ -115,8 +121,8 @@
 
         .service-item p {
             color: #666;
-            font-size: 1.2em; /* Fuente */
-            line-height: 1.3;
+            font-size: 1em;
+            line-height: 1.4;
             text-align: justify;
             flex-grow: 1;
             display: flex;
@@ -126,14 +132,35 @@
             overflow: hidden;
         }
 
-        @media (max-width: 900px) {
+        @media (max-width: 768px) {
+            header {
+                flex-direction: column;
+                align-items: flex-start;
+                padding: 10px 20px;
+            }
+            nav {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 5px;
+                width: 100%;
+            }
+            nav a {
+                width: 100%;
+                text-align: center;
+                padding: 10px;
+                box-sizing: border-box;
+            }
             .services-top {
                 flex-direction: column;
-                align-items: center;
+                gap: 20px;
             }
             .service-item {
-                width: 90%;
+                width: 100%;
                 margin-bottom: 20px;
+                min-height: 250px;
+            }
+            .service-item p {
+                font-size: 1.1em;
             }
         }
     </style>
@@ -177,4 +204,3 @@
     </footer>
 </body>
 </html>
-
