--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
                 flex-direction: column;
                 align-items: flex-start;
                 padding: 10px 20px;
+                width: 100%; /* <-- Solución al problema del ancho en móviles */
+                box-sizing: border-box;
             }
             nav {
                 flex-direction: column;
