--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestiones BV</title>
     <style>
-        body { /* ... (sin cambios) */ }
-        .background-overlay { /* ... (sin cambios) */ }
+        /* Estilos generales (se aplican a todas las pantallas) */
+        body {
+            margin: 0;
+            font-family: 'Helvetica', sans-serif;
+            color: #333;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+
+        .background-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('https://gestionesbv.github.io/gestiones_bv/Como-crear-una-estrategia-de-marketing-en-redes-sociales-01.png') no-repeat center center fixed;
+            background-size: cover;
+            opacity: 0.3;
+            z-index: -1;
+        }
 
         header {
             background-color: #333;
@@ -14,20 +33,20 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 20px 40px;
+            padding: 20px;
             font-size: 1.5em;
-            flex-wrap: wrap; /* Importante para pantallas MUY pequeñas */
+            flex-wrap: wrap;
         }
 
         header h1 {
             font-size: 2em;
             margin: 0;
-            white-space: nowrap; /* Evita que el título se corte */
+            white-space: nowrap;
         }
 
         nav {
             display: flex;
-            gap: 10px; /* Reducido el espacio entre links */
+            gap: 10px;
             flex-wrap: wrap;
             justify-content: center;
         }
@@ -37,20 +56,39 @@
             color: #fff;
             font-weight: bold;
             font-size: 0.9em;
-            padding: 8px 12px; /* Aumentado el padding */
-            border-radius: 5px; /* Bordes redondeados */
+            padding: 8px 12px;
+            border-radius: 5px;
             white-space: nowrap;
         }
 
-        nav a:hover { /* ... (sin cambios) */ }
+        nav a:hover {
+            text-decoration: underline;
+        }
 
-        .content { /* ... (sin cambios) */ }
-        .services { /* ... (sin cambios) */ }
+        .content {
+            padding: 40px;
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 40px;
+            width: 90%;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .services {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 40px;
+            width: 100%;
+        }
 
         .services-top {
             display: flex;
             justify-content: center;
-            gap: 20px; /* Reducido el gap */
+            gap: 20px;
             width: 100%;
             max-width: 1200px;
         }
@@ -60,27 +98,32 @@
             padding: 20px;
             border-radius: 15px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            text-align: left; /* Alineación a la izquierda para mejor legibilidad */
+            text-align: left;
             box-sizing: border-box;
             display: flex;
             flex-direction: column;
-            width: calc(50% - 10px); /* Ancho ajustado para mejor espaciado */
-            min-height: 300px; /* Altura mínima para evitar que se vean muy pequeñas */
+            width: calc(50% - 10px);
+            min-height: 300px;
         }
 
         .service-item img {
             width: 100%;
-            max-height: 150px; /* Altura máxima para las imágenes */
+            max-height: 150px;
             border-radius: 10px;
             margin-bottom: 15px;
             object-fit: cover;
         }
 
-        .service-item h3 { /* ... (sin cambios) */ }
+        .service-item h3 {
+            color: #6a7a96;
+            font-size: 1.5em;
+            margin-bottom: 10px;
+        }
 
         .service-item p {
-            font-size: 1em; /* Reducido un poco el tamaño de la fuente */
-            line-height: 1.4; /* Aumentado el interlineado */
+            color: #666;
+            font-size: 1em;
+            line-height: 1.4;
             text-align: justify;
             flex-grow: 1;
             display: flex;
@@ -90,33 +133,49 @@
             overflow: hidden;
         }
 
+        footer {
+          text-align: center;
+          padding: 10px;
+          background-color: #f0f0f0;
+        }
+
+        /* Media Query para pantallas pequeñas (móviles) */
         @media (max-width: 768px) {
             header {
                 flex-direction: column;
-                align-items: flex-start; /* Alinea el título a la izquierda en móviles */
-                padding: 10px 20px; /* Reduce el padding en móviles */
-            }
-            nav {
-                flex-direction: column;
-                align-items: flex-start; /* Alinea los links a la izquierda en móviles */
-                gap: 5px; /* Reduce el espacio entre links en vertical */
-                width: 100%; /* Ocupa todo el ancho */
-            }
-            nav a {
-                width: 100%; /* Links ocupan todo el ancho en móviles */
-                text-align: center; /* Texto centrado en los links */
+                align-items: center;
                 padding: 10px;
+                width: 100%;
                 box-sizing: border-box;
             }
+
+            nav {
+                flex-direction: column;
+                align-items: stretch;
+                gap: 5px;
+                width: 100%;
+                box-sizing: border-box;
+                margin: 10px 0;
+            }
+
+            nav a {
+                text-align: center;
+                padding: 10px;
+                box-sizing: border-box;
+                display: block;
+            }
+
             .services-top {
                 flex-direction: column;
                 gap: 20px;
             }
+
             .service-item {
                 width: 100%;
                 margin-bottom: 20px;
-                min-height: 250px; /* Altura mínima en móviles */
+                min-height: 250px;
             }
+
             .service-item p {
                 font-size: 1.1em;
             }
@@ -124,5 +183,41 @@
     </style>
 </head>
 <body>
-    </body>
+    <div class="background-overlay"></div>
+    <header>
+        <h1>Gestiones BV</h1>
+        <nav>
+            <a href="index.html">Inicio</a>
+            <a href="politica_privacidad.html">Política de Privacidad</a>
+            <a href="eliminacion_datos.html">Eliminación de Datos</a>
+            <a href="terminos_condiciones.html">Términos y Condiciones</a>
+            <a href="cultura.html">Cultura</a>
+            <a href="contacto.html">Contáctanos</a>
+        </nav>
+    </header>
+    <div class="content">
+        <section class="services">
+            <div class="services-top">
+                <div class="service-item">
+                    <img src="https://gestionesbv.github.io/gestiones_bv/kpi_looker.png" alt="KPI y Dashboard">
+                    <h3>KPI y Dashboards</h3>
+                    <p>Creación de indicadores clave de rendimiento personalizados y dashboards interactivos para facilitar la toma de decisiones basadas en datos. Incluye integración con herramientas como Power BI, Looker, y Tableau, adaptadas a tus necesidades empresariales.</p>
+                </div>
+                <div class="service-item">
+                    <img src="https://gestionesbv.github.io/gestiones_bv/bigquery.png" alt="Servicios SQL">
+                    <h3>Servicios SQL</h3>
+                    <p>Generación y análisis de datos en plataformas como BigQuery, integradas con sistemas como Google y Facebook. Implementación de modelos de datos optimizados para análisis avanzado y reportes automatizados.</p>
+                </div>
+            </div>
+            <div class="service-item">
+                <img src="https://gestionesbv.github.io/gestiones_bv/automatizacion.jpeg" alt="Automatización">
+                <h3>Automatización</h3>
+                <p>Automatización de reportes para optimizar procesos analíticos, reduciendo tiempo y esfuerzo operativo. Incluye alertas personalizadas y flujos de trabajo automáticos para agilizar la toma de decisiones.</p>
+            </div>
+        </section>
+    </div>
+    <footer>
+        © 2024 Gestiones BV | Transformación Digital y Marketing de Datos
+    </footer>
+</body>
 </html>
